--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -38,8 +38,6 @@ a {
   max-width: 525px;
   min-height: 670px;
   position: relative;
-  /* background: url("../../Assets/Login/bg-form.jpg")
-    no-repeat center; */
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
@@ -118,6 +116,7 @@ a {
 }
 .login-form .group .button {
   background: #1161ee;
+  cursor: pointer;
 }
 .login-form .group label .icon {
   width: 15px;
