--- a/src/Styles/NavBar.css
+++ b/src/Styles/NavBar.css
@@ -2,6 +2,8 @@
   height: 32px;
   margin: 16px;
   background: rgba(255, 255, 255, 0.3);
+  /* color: orange; */
+  text-align: center;
 }
 .site-layout .site-layout-background {
   background: #fff;
